--- a/India.html
+++ b/India.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ấn Độ - Đến Bồ Đề Đạo Tràng Mà Không Sùng Đạo</title>
+ 	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 	  
 	  <meta name="keywords" 
          content="Ấn Độ Du Lịch Tình Nguyện Tự Sự Bodh Gaya Jamyang Foundation Sanghamitra Institute">
