--- a/Myanmar.html
+++ b/Myanmar.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Miến Điện – Bệnh Viện Miễn Phí ở Yangon </title>
+  	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
+
 	  
 	  <meta name="keywords" 
          content="Myanmar Miến Điện Yangon ThaBarWa Volunteer Tình Nguyện Bệnh Viện">
