--- a/Vietnam.html
+++ b/Vietnam.html
@@ -4,7 +4,8 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Việt Nam – Đi Gò Đầu Trẻ Ở Trường Đồi Có Gì Vui Vậy?</title>
+    <title>Việt Nam – Đi Gõ Đầu Trẻ Ở Trường Đồi Có Gì Vui Vậy?</title>
+  	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 	  
 	  <meta name="keywords" 
          content="Việt Nam Hà Nội Trường Đồi Quốc Oai Spring Hill Academy Dạy Học Giảng Học Sinh Khai Phòng Mô Hình">
@@ -95,7 +96,7 @@
 	  <section class="background-banner text-center Thai-banner" id="top">
 
 		<div id="banner-text">
-			<h1 class="display-4">Việt Nam – Đi Gò Đầu Trẻ Ở Trường Đồi Có Gì Vui Vậy?</h1>
+			<h1 class="display-4">Việt Nam – Đi Gõ Đầu Trẻ Ở Trường Đồi Có Gì Vui Vậy?</h1>
        		<p class="lead text-center">
 				Lúc đọc báo viết về Trường Đồi, hai mắt mình sáng rực lên vì không tin nổi là ở Việt Nam lại có mô hình học tập tiên tiến và khai phóng đến thế, nó như giữ lại cho mình chút niềm tin về ở đâu đó trên đất nước này có những người dám nghĩ dám làm. Lại một lần nữa, mình chia tay Sài Gòn bằng một cơn mưa rào đầu thu, lòng hướng về Hà Nội với nhiều ấp ủ.
 			</p>
@@ -128,6 +129,7 @@
 					Mà thật ra một giáo viên dạy tốt là một người luôn biết soi chiếu bản thân với những tâm tư của người họ rằng họ đang gặp khó khăn chỗ nào, nên người ta giỏi không phải vì dạy giỏi, người ta giỏi vì biết giúp người chưa giỏi thành giỏi. Làm sao để dạy một đứa hư? Là phải hư hơn nó để nó xem mà nể mình, thầy vừa hư mà vừa giỏi! Làm sao để dạy một đứa kém? Là mình cũng phải từng kém như nhỏ ngày xưa với 7749 ngữ pháp tiếng Anh. Làm sao để dạy một người không giỏi ngoại ngữ? Thì bản thân phải tự đi học them một ngoại ngữ để quay ngược trở về làm người học để đau nỗi đau của những người học khác, mình chọn học tiếng Trung và cũng không đếm bao nhiều ngày đã ngồi khóc vì không nhớ ra cách đọc chữ. Làm sao để thúc đẩy học trò? Thì mình phải biết thứ khiến chúng nó thích, mà các cô cậu cấp hai bắt đầu quan tâm đến vấn đề nhận diện về giới, mà thầy hiệu trưởng lại đang ở xa chẳng ở đây để mình lấy ý kiến, nên thôi tự tạo bài giảng dạy các bạn về thế nào là tình dục và cách phòng tránh lúc vui vẻ, mà cực chẳng đã, đi dạy các con mà phải giấu như mèo giấu cứt với quản lý vì “em làm thế coi không được!”(?) Ủa vậy rồi tối đến chị không vui vẻ với chồng? Mà chị có vui vẻ không đấy? Sao cứ thích chạy trốn bản thân mình vậy nhỉ?
 					<br><br>
 					Mình chia tay các con không một lời từ biệt mà phải lên Instagram nhắn cho các con lời tạm biệt hẹn các con hữu duyên sẽ gặp lại vì bản thân mình không được tôn trọng ở môi trường này. Mình đã rất đau khổ thời gian đầu, mình trách móc họ sau những nổ lực của mình, căm phẩn vì những gì mình đọc trên báo không giống trong thực tế, hận bản thân đã hạ mình xuống chỉ để xong việc nhưng cũng chẳng thoát khỏi tai mắt của bè lũ nơi đây. Nhưng rồi mình nhận ra, ngay từ đâu, mình đã không nên bước vào cuộc đời của họ bằng việc hạ mình xuống, mình có tư duy cao hơn họ, và đó là sự thật. Mình không thể chạy trốn bản thân đang gào thét muốn phá tan cái nhà tù mang danh để truyền đạt kiến thức này được nữa. Mình phải tự tìm lối cho mình thôi, giờ chẳng còn ai ở bên nữa, không một ai có thể giải quyết việc của mình tốt bằng mình, và đây là bài học mà mình cần phải học, vì nếu không học nó, mình sẽ lại hạ mình để những người sau không phù hợp bước vào cuộc đời và làm mình tổn thương. Vậy là quá đủ rồi. 
+				   <br><br>
 					<em>Việt Nam, rạng sáng 15 tháng 8 năm 2021</em>
 
 				   <br>
