--- a/Thailand.html
+++ b/Thailand.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nhận Về Nhiều Hơn Là Cho Đi Ở Thái Lan</title>
+  	<link rel="shortcut icon" type="image/jpg" href="images/Favicon-Demo.png">
 	  
 	  <meta name="keywords" 
          content="Thái Lan Du Lịch Tình Nguyện Tự Sự Bangkok Pathom Asoke Community Nakhon Pathom">
