--- a/index.html
+++ b/index.html
@@ -460,8 +460,9 @@
 									<br><br>
 									<a href="https://dminhphan.github.io/Vietnam" class="btn btn-info">Tìm Hiểu thêm</a>
 								</div>
+								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe src="https://www.youtube.com/embed/XOo1ogi7dGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height=100% autoplay=1 loop=1></iframe>
+									<iframe src="https://www.youtube.com/embed/XOo1ogi7dGI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen width=100% height="320px" autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
@@ -476,8 +477,9 @@
 									<br><br>
 									<a href="https://dminhphan.github.io/Thailand" class="btn btn-info">Tìm Hiểu thêm</a>
 								</div>
+								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe width=100% height=100% src="https://www.youtube.com/embed/gkXaPZKsREQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
+									<iframe width=100% height="320px" src="https://www.youtube.com/embed/gkXaPZKsREQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
@@ -492,8 +494,9 @@
 									<br><br>
 									<a href="https://dminhphan.github.io/India" class="btn btn-info">Tìm Hiểu thêm</a>
 								</div>
+								<br><br>
 								<div class="col-lg-6 col-md-6 col-sm-12 col-12">
-									<iframe width=100% height=100% src="https://www.youtube.com/embed/kJtGNZlvKUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
+									<iframe width=100% height="320px" src="https://www.youtube.com/embed/kJtGNZlvKUI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen autoplay=1 loop=1></iframe>
 								</div>
 							<br>
 							<br>
