--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
        <br>
 	   <div class="row text-center">
           <br>
-		   <div id="Self-Intro" class="col-lg-12"><strong><em>Mình chẳng có một cái kế hoạch nào cả, sau quá nhiều chuyện dẫn mình đến Hà Nội, nói cho bạn biết để đừng kỳ vọng mình nhiều quá lại thất vọng thôi. Vẫn đang học cách cho đi đừng giữ lại, sống chấp nhận bất kỳ, đến bất cứ nơi nào cần phải đến, học bất cứ bài học nào cần phải học, gặp bất cứ ai cần phải gặp, làm bất cứ điều gì cần phải làm nếu có cơ hội. Và vẫn phải học đi học lại nếu học mà cứ trả chữ lại, ích kỷ, sống cho bản thân, thích nhận hơn là cho đi, tính toán với người mình yêu thương, chạy theo tiền tài, danh vọng.</em></strong></div>
+		   <div id="Self-Intro" class="col-lg-12"><strong><em>Mình chẳng có một cái kế hoạch nào cả, sau quá nhiều chuyện dẫn mình đến Hà Nội, nói cho bạn biết để đừng kỳ vọng mình nhiều quá lại thất vọng thôi. Vẫn đang học cách cho đi đừng giữ lại, sống chấp nhận bất kỳ, đến bất cứ nơi nào cần phải đến, học bất cứ bài học nào cần phải học, gặp bất cứ ai cần phải gặp, làm bất cứ điều gì cần phải làm nếu có cơ hội. Và vẫn phải học đi học lại bằng sự đau khổ nếu học mà cứ trả chữ lại, sống vì bản thân mà hạ thấp quyền lợi người khác, thích nhận về hơn là cho đi, tính toán với người mình yêu thương, chạy theo tiền tài, danh vọng mà bỏ quên sức khỏe tinh thần.</em></strong></div>
        </div>
 
        <br>
