--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                 					<a href="https://commons.wikimedia.org/wiki/File:Bui_Vien_Walking_Street_1.jpg"><img class="card-img-top img-fluid rounded" src="images/PhoTayBuiVien.jpg" alt="Phố Tây Bùi Viện"></a>
                 					<div class="card-body card-body-carousel-1">
                    						<h4 class="card-title">Phố Tây Bùi Viện</h4>
-                   						<p class="card-text">Nơi ăn chơi vui thời thượng đúng chất Tây cho những người trẻ muốn đổi món ăn tinh thần khi ở Sài Gòn!</p>
+                   						<p class="card-text">Ngày xưa Cậu Nhỏ có đi làm bồi bàn kiếm chút tiền Tết ở một nhà hàng có chủ người Hoa trên con đường này.</p>
                    						<br><br>
                    						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
