--- a/Myanmar.html
+++ b/Myanmar.html
@@ -64,6 +64,7 @@
                 </div>
              </li>
 <!--			 My Work-->
+<!--
              <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					Cái Bàn
@@ -75,7 +76,7 @@
 					<a class="dropdown-item" href="#">Lập Trình</a>
                 </div>
              </li>
-<!--             Blogs-->
+             Blogs
 			 <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 	Cuốn Sổ
@@ -87,6 +88,7 @@
 					<a class="dropdown-item" href="#">Thương Lấy Cái Thân</a>
                 </div>
              </li>
+-->
 <!--             Disabled Menu-->
 			 <li class="nav-item">
                 <a class="nav-link disabled" href="#">Sắp Ra Mắt</a>
