--- a/Thailand.html
+++ b/Thailand.html
@@ -66,6 +66,7 @@
                 </div>
              </li>
 <!--			 My Work-->
+<!--
              <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					Cái Bàn
@@ -77,7 +78,7 @@
 					<a class="dropdown-item" href="#">Lập Trình</a>
                 </div>
              </li>
-<!--             Blogs-->
+             Blogs
 			 <li class="nav-item dropdown active">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 	Cuốn Sổ
@@ -89,6 +90,7 @@
 					<a class="dropdown-item" href="#">Thương Lấy Cái Thân</a>
                 </div>
              </li>
+-->
 <!--             Disabled Menu-->
 			 <li class="nav-item">
                 <a class="nav-link disabled" href="#">Sắp Ra Mắt</a>
