--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                    						<h4 class="card-title">Nhà Thờ Đức Bà</h4>
                    						<p class="card-text">Chốn vui chơi bình dân của lứa học sinh sinh viên bao đời là công viên đối diện, sát sạt là Bưu điện thành phố.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://www.tripadvisor.com.vn/Attraction_Review-g293925-d317896-Reviews-Saigon_Notre_Dame_Cathedral-Ho_Chi_Minh_City.html" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -171,7 +171,7 @@
                    						<h4 class="card-title">Khu Hoa Kiều</h4>
                    						<p class="card-text">Nhắc đến Sài Gòn không thể thiếu đi những đóng góp  của cộng đồng người Hoa trong việc gìn giữ văn hóa.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://www.vntrip.vn/cam-nang/pho-nguoi-hoa-sai-gon-75874" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -183,7 +183,7 @@
                    						<h4 class="card-title">Thư Viện Tổng Hợp</h4>
                    						<p class="card-text">Chán ngồi cà phê ồn ào để học thì vào thư viện tìm chốn yên ả mà mở cuốn sách ra, ung dung đọc sách</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://thuvientphcm.gov.vn/" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -201,7 +201,7 @@
                    						<h4 class="card-title">Bưu Điện Trung Tâm Sài Gòn</h4>
                    						<p class="card-text">Bưu Điện Thành Phố ấn tượng với kiến trúc thiết kế mái vòm đặc trưng theo phong cách Châu Âu được giữ.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://justfly.vn/discovery/vietnam/ho-chi-minh-city/buu-dien-sai-gon" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -213,7 +213,7 @@
                    						<h4 class="card-title">Chợ Bàn Cờ</h4>
                    						<p class="card-text">Người Sài Gòn giản dị và chân chất, đôi khi còn hơi xuề xòa, mà đã muốn lên đồ thì phải lựa đồ si đẹp rẻ.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://anhchien.vn/do-si-cho-ban-co/" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -225,7 +225,7 @@
                    						<h4 class="card-title">Bảo Tàng Phụ Nữ Nam Bộ</h4>
                    						<p class="card-text">Một bảo tàng có đầu tư về chất xám và phản ánh đúng sự phát triển của người phụ nữ Việt Nam qua các thời kỳ.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://vinpearl.com/vi/tham-thu-bao-tang-phu-nu-nam-bo-nha-luu-niem-lon-nhat-trung-tam-sai-gon" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -243,7 +243,7 @@
                    						<h4 class="card-title">Phố Đi Bộ Nguyễn Huệ</h4>
                    						<p class="card-text">Tọa lạc ngay trung tâm thành phố với những thú vui thời thượng và nhiều hoạt động văn hóa cho giới trẻ.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://gody.vn/chau-a/viet-nam/ho-chi-minh/pho-di-bo-nguyen-hue" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -255,7 +255,7 @@
                    						<h4 class="card-title">Phố Tây Bùi Viện</h4>
                    						<p class="card-text">Ngày xưa Cậu Nhỏ có đi làm bồi bàn kiếm chút tiền Tết ở một nhà hàng có chủ người Hoa trên con đường này.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://tourkyco.vn/quay-tung-pho-di-bo-bui-vien-sieu-hot-o-sai-thanh/" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -267,7 +267,7 @@
                    						<h4 class="card-title">Bảo Tàng Áo Dài</h4>
                    						<p class="card-text">Điểm đến dành cho người muốn tìm hiểu về lịch sử văn hóa thông qua quốc phục Việt Nam, chiếc áo dài.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://kenh14.vn/o-sai-gon-co-mot-bao-tang-dep-nhu-tranh-chi-danh-rieng-de-ton-vinh-ao-dai-20171118223012454.chn" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -313,7 +313,7 @@
                    						<h4 class="card-title">Chùa Một Cột</h4>
                    						<p class="card-text">Là một điện thờ với kiến trúc đặt trên một cột trụ duy nhất nên trở thành điểm thu hút du khách. Chùa Một Cột có tên ban đầu là Liên Hoa Đài có tức là Đài Hoa Sen.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://mytour.vn/location/8435-chua-mot-cot-bieu-tuong-van-hoa-viet-nam.html" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -325,7 +325,7 @@
                    						<h4 class="card-title">Hoàng Thành Thăng Long</h4>
                    						<p class="card-text">Quần thể Hoàng thành Thăng Long bắt đầu từ thời kì tiền Thăng Long qua thời Đinh - Tiền Lê, phát triển mạnh dưới thời Lý, Trần, Lê và thành Hà Nội dưới triều Nguyễn.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="http://dsvh.gov.vn/di-tich-lich-su-va-khao-co-khu-trung-tam-hoang-thanh-thang-long-ha-noi-2945" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -337,7 +337,7 @@
                    						<h4 class="card-title">Nhà Tù Hỏa Lò</h4>
                    						<p class="card-text">Nhà tù Hỏa Lò, xưa có tên tiếng Pháp là Maison Centrale, là một nhà tù cũ nổi tiếng gần đây với giới trẻ do các hoạt động truyền thông của một nhóm bạn trẻ yêu mến.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://kenh14.vn/lam-content-cung-xiu-tren-fanpage-nhung-trai-nghiem-nha-tu-hoa-lo-xong-thi-ai-cung-khoc-hiem-co-mot-noi-tuong-nhu-lanh-leo-lai-chua-nhieu-thu-am-nong-den-vay-2021043009035702.chn" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -354,7 +354,7 @@
                    						<h4 class="card-title">Hồ Hoàn Kiếm</h4>
                    						<p class="card-text">Hồ Hoàn Kiếm còn được gọi là Hồ Gươm là một hồ nước ngọt tự nhiên nằm ở trung tâm thành phố Hà Nội, gắn liền với câu chuyện truyền thuyết Rùa Vàng Trả Gươm.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="http://dulich24.com.vn/du-lich-quan-hoan-kiem/ho-hoan-kiem-id-6487" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -366,7 +366,7 @@
                    						<h4 class="card-title">Văn Miếu Quốc Tử Giám</h4>
                    						<p class="card-text">"Hà Nội ngàn năm văn hiến" vậy thì "người Hà Nội ngàn năm văn vở". Phải công nhận là ra đây mới thấy văn hóa học tập thật sự được những gia đình đặc biệt chú trọng.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="http://vanmieu.gov.vn/en/" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -378,7 +378,7 @@
                    						<h4 class="card-title">Khu Phố Cổ Hà Nội</h4>
                    						<p class="card-text">Khu Phố Cổ là tên gọi thân thương của một khu vực đô thị có từ lâu đời nằm ở ngoài hoàng thành Thăng Long. Đến Phố Cổ mà không thưởng thức ẩm thực là tiếc lắm!</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://www.vntrip.vn/cam-nang/pho-co-ha-noi-12944" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -394,7 +394,7 @@
                    						<h4 class="card-title">Hồ Tây</h4>
                    						<p class="card-text">Hồ Tây là một hồ nước tự nhiên lớn nhất ở nội thành thủ đô Hà Nội, yêu sự yên bình sau một ngày làm việc thì chắc chắn không thể bỏ qua ngắm hoàng hôn ở quanh hồ.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://hanoi1000.vn/night/" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -406,7 +406,7 @@
                    						<h4 class="card-title">Nhà Thờ Lớn Hà Nội</h4>
                    						<p class="card-text">Với kiến trúc cổ kính, Nhà Thờ Lớn ở Hà Nội là sự đối đáp với Nhà Thờ Đức Bà ở Sài Gòn, ở đây thường xuyên diễn ra các sinh hoạt tín ngưỡng của các giáo dân Công giáo.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://kenhhomestay.com/nha-tho-lon-ha-noi/" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
@@ -418,7 +418,7 @@
                    						<h4 class="card-title">Thư viện Quốc gia Việt Nam</h4>
                    						<p class="card-text">Sài Gòn có Thư viện Khoa học Tổng hợp thì bắt buộc phải đến Thư Viện Quốc Gia khi đến Hà Nội nếu bạn là một người thích sách hay đơn giản chán ngồi cà phê ồn ào.</p>
                    						<br><br>
-                   						<a href="#" class="btn btn-info">Tìm Hiểu thêm</a>
+                   						<a href="https://nlv.gov.vn/" class="btn btn-info">Tìm Hiểu thêm</a>
                 					</div>
              					</div>
           					</div>
